# cms-platform

./: .gitattributes  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/workflows/: auto-merge-dev-to-master.yml  ci.yml  codeql.yml  dependabot-auto-merge.yml  e2e.yml  post-deploy-smoke.yml  promote.yml  scheduled-merge.yml  scraper-ci.yml  solver-agent.yml
agents/: README.md
agents/CMS Connector - Website/: .env.example  AGENTS.md  LEARNINGS.md  file_reader.py  github.py  output_writer.py  prompts.py  requirements-dev.txt  requirements.txt  scan.py  vercel.py
agents/Design Prompt creator/: AGENTS.md  LEARNINGS.md  (+1 more)
backend/: .coveragerc  .env.example  manage.py  requirements-dev.txt  requirements.txt  vercel.json  vercel_entry.py
cms-client-template/: README.md  cms.config.example.json  cms.config.example.ts  cms.types.example.ts
docs/: DEVELOPMENT.md  ENVIRONMENTS.md  ONBOARDING.md  SECURITY.md
e2e/: .env.example  .gitignore  README.md  package-lock.json  package.json  playwright.config.ts  tsconfig.json
frontend/: .env.example  .prettierignore  README.md  next.config.ts  package-lock.json  package.json  vitest.config.ts
scraper/: .env.example  IMPLEMENTATION_PROMPT.md  README.md  SCRAPER_IMPROVEMENT_PLAN.md  lead-single-nl.json  lead-single.json  leads-dry-run.json  plumbers-nl.json  pyproject.toml
scraper/deploy/: DEPLOY.md  scraper.service  scraper.timer
scraper/src/scraper/: categories.py  cli.py  config.py  dedup.py  geo.py  google_maps.py  models.py  pipeline.py  selectors.py  urls.py
scraper/src/scraper/regions/: __init__.py  nl.jsonl
scraper/src/scraper/sinks/: base.py  json_sink.py  sheets_sink.py  supabase_sink.py
scraper/tests/: test_categories.py  test_cli.py  test_dedup.py  test_geo.py  test_google_maps_pure.py  test_models.py  test_pipeline.py  test_regions.py  test_sinks_json.py  test_urls.py
scraper/tools/: build_regions.py
scripts/: apply_supabase_migration.py  disable_vercel_auth.py  init-env.sh  mint_admin_api_key.py  seed_e2e.py  smoke_admin_endpoints.py  smoke_admin_writes.py
security/: FINDINGS.md  README.md  dismissed.md  methodology.md  review-log.md  scheduled-review-prompt.md  scope-checklist.md
(+616 files in other folders)
