[project]
name = "rt-scraper"
version = "0.1.0"
description = "Google Maps lead scraper for Roman Technologies"
requires-python = ">=3.11"
dependencies = [
    "playwright==1.50.0",
    "pydantic==2.9.2",
    "pydantic-settings==2.6.1",
    "typer==0.13.1",
    "loguru==0.7.2",
    "tenacity==9.0.0",
    "rapidfuzz==3.10.1",
    "supabase==2.10.0",
    "gspread==6.1.4",
    "google-auth==2.36.0",
    "python-dotenv==1.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.3",
    "pytest-asyncio==0.24.0",
    "ruff==0.7.4",
    "mypy==1.13.0",
]

[project.scripts]
scraper = "scraper.cli:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC"]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"
explicit_package_bases = true

[[tool.mypy.overrides]]
module = ["gspread", "google.*"]
ignore_missing_imports = true
follow_imports = "skip"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
