[project]
name = "rt-scraper"
version = "0.1.0"
description = "Google Maps lead scraper for Roman Technologies"
requires-python = ">=3.11"
dependencies = [
    "playwright==1.50.0",
    "pydantic==2.11.7",
    "pydantic-settings==2.7.0",
    "typer==0.13.1",
    "loguru==0.7.2",
    "tenacity==9.0.0",
    "rapidfuzz==3.10.1",
    "supabase==2.29.0",
    "python-dotenv==1.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
    "ruff==0.7.4",
    "mypy==1.13.0",
]

[project.scripts]
scraper = "scraper.cli:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"scraper.regions" = ["*.jsonl"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC"]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"
explicit_package_bases = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
